# claude_core

./: .codex-review.json  .gitattributes  .gitignore  00-skill-routing-and-escalation.md  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  VALIDATION_REPORT.md  WORKFLOW.md  claude-skills.filters.toml  install.cmd  install.ps1  install.sh  todo.md
.claude/: hooks.json
.claude-plugin/: plugin.json
_shared/: common-discipline.md
backend-and-data-architecture/: SKILL.md
cloud-and-devops-expert/: SKILL.md
docs/: audit-bundle-format.md  benchmark-comparison-scorecard.md  benchmark-scorecard.json  benchmark-suite.md  code-search-demo-and-gap-map.md  compatibility-matrix.md  context-efficiency-playbook.md  demo-branch-closeout-flow.md  demo-docs-governance-flow.md  demo-greenfield-feature-flow.md  demo-multi-agent-closure-flow.md  demo-pr-fix-flow.md  demo-regression-hardening-flow.md  demo-stateful-bug-fix-flow.md  demo-windows-validation-recovery-flow.md  first-success-path.md  flow-check-schema.md  hook-usage.md  implementation-roadmap.md  memoriesv2-long-term-architecture.md  memory-product-adoption-decision.md  memory-recall-benchmark-bundle.md  memory-recall-benchmark-scorecard.json  native-cli-migration-plan.md  native-gap-map.md  open-source-memory-patterns.md  release-notes.md  release-proof-bundle.md  security-audit-status.md  (+4 more)
rust/crates/claude-skills/: Cargo.toml
rust/crates/claude-skills-flow/: Cargo.toml
rust/crates/claude-skills-flow/src/: lib.rs
rust/crates/claude-skills-professionaltext/: Cargo.toml
rust/crates/claude-skills-professionaltext/src/: lib.rs
rust/crates/claude-skills-releaseassets/: Cargo.toml
rust/crates/claude-skills-releaseassets/src/: lib.rs
rust/crates/claude-skills/src/: args.rs  commands.rs  help.rs  help_advanced.txt  help_advanced_state.txt  help_operator.txt  help_operator_state.txt  json.rs  main.rs  manager.rs  review.rs  runner.rs  runtime.rs  utility.rs
rust/crates/claude-skills/src/adapters/: build.rs  common.rs  containers.rs  files.rs  generic.rs  git.rs  lint.rs  logs.rs  mod.rs  search.rs  tests.rs
rust/crates/claude-skills/src/hooks/: claude.rs  codex.rs  cursor.rs  mod.rs  windsurf.rs
rust/crates/claude-skills/src/manager/: agent_config.rs  doctor.rs  install.rs  mod.rs  verify.rs
rust/crates/claude-skills/src/proxy/: adapter.rs  adapters.rs  classify.rs  command_ast.rs  event_log.rs  filters.rs  injection_guard.rs  mod.rs  raw_store.rs  registry.rs  render.rs  run.rs  token_meter.rs
rust/crates/claude-skills/src/runner/: hook_lifecycle.rs  mod.rs  shell_rewrite.rs
rust/crates/claude-skills/src/utility/: code_search.rs  gain.rs  memory.rs  mod.rs  session.rs  system_map.rs  workflow_ledger.rs  working_brief.rs
rust/crates/claude-skills/tests/: manager_provision_test.rs
(+105 files in other folders)
