[workspace]
resolver = "2"
members = ["rust/crates/claude-skills", "rust/crates/claude-skills-platform", "rust/crates/claude-skills-releaseassets", "rust/crates/claude-skills-professionaltext", "rust/crates/claude-skills-flow"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/UntaDotMy/claude_skills"

[workspace.dependencies]
claude-skills-platform = { path = "rust/crates/claude-skills-platform" }
claude-skills-releaseassets = { path = "rust/crates/claude-skills-releaseassets" }
claude-skills-professionaltext = { path = "rust/crates/claude-skills-professionaltext" }
claude-skills-flow = { path = "rust/crates/claude-skills-flow" }
regex = "1.11"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["preserve_order"] }
tiktoken-rs = "0.11.0"
toml = "0.8"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
