[package]
name = "claude-skills-flow"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Preserve-existing-flow evidence schema for the native claude-skills CLI."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
