[package]
name = "claude-skills-professionaltext"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Professional wording lint for commit, PR, review, and final-response text."

[dependencies]
regex = { workspace = true }
