[package]
name = "claude-skills-releaseassets"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Release asset naming, URLs, and cache paths for claude-skills."

[dependencies]
claude-skills-platform = { workspace = true }
