[package]
name = "claude-skills"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Native claude-skills CLI — Rust port."

[dependencies]
claude-skills-flow = { workspace = true }
claude-skills-platform = { workspace = true }
claude-skills-releaseassets = { workspace = true }
claude-skills-professionaltext = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
tiktoken-rs = { workspace = true }
chrono = "0.4"
rand = "0.8"
